--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Invader Sim</title>
-    <link rel="stylesheet" href="/css/style.css" type="text" media="screen" title="no title" charset="utf-8">
-  </head>
-  <body>
-    <p class="warning">
-    <span>POP-TARTS!</span>
-  </p>
-  <div class="image">
-    <img src="img/giphy.gif" />
-  </div>
+<head>
+	<title>Star Wars Spoilers</title>
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
+</head>
+<body>
+	<img src="img/deathstar.png" />
+	<p class="spoiler">
+		<!--Spoiler:-->
+		<span>Darth Vader is Luke Skywalker's Father! Noooooooooooo!</span>
+	</p>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/app.js" type="text/javascript" charset="utf-8"></script>
-  </body>
+</body>
 </html>
